[project]
name = "docker-captain"
version = "0.1.5"
description = "A friendly CLI to manage multiple Docker Compose deployments with style."
authors = [
    {name = "Luca Bello", email = "lusgabello@gmail.com"},
]
readme = "README.md"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.10"
dependencies = [
    "platformdirs>=4.5.0",
    "pyyaml>=6.0.3",
    "questionary>=2.1.1",
    "rich>=14.2.0",
    "sh>=2.2.2",
    "typer>=0.19.2",
]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
    "pyright>=1.1.408",
    "codespell>=2.4.1",
    "vulture>=2.14",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-sugar>=1.1.1",
    "actionlint-py>=1.7.10.24",
    "uv-secure>=0.15.4",
]

[project.urls]
Homepage = "https://github.com/lucabello/docker-captain"
Documentation = "https://github.com/lucabello/docker-captain"
Repository = "https://github.com/lucabello/docker-captain"
Issues = "https://github.com/lucabello/docker-captain/issues"
Changelog = "https://github.com/lucabello/docker-captain/releases"

[project.scripts]
docker-captain = "docker_captain.main:main"


# Building and publishing
[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.uv.workspace]
members = [
    "docker-captain",
]

# Tools configuration
[tool.ruff]
line-length = 99

[tool.lint.pydocstyle]
convention = "google"

[tool.codespell]
skip = ".git,build,venv*"
ignore-words-list = "assertIn"

[tool.vulture]
min_confidence = 80
